Changed Lightbox settings (Maybe) resolved navbar cutoff problem

--- a/css/style-small.css
+++ b/css/style-small.css
@@ -67,7 +67,7 @@
 /* Header */
 
 	#header > header {
-		padding: 2em;
+		padding: 1.5em;
 	}
 
 		#header > header .avatar {
