--- a/css/style-xlarge.css
+++ b/css/style-xlarge.css
@@ -17,7 +17,7 @@
 	}
 
 		#header > header {
-			padding: 2em;
+			padding: 1.5em;
 		}
 
 		#header > footer {
